--- a/giaodien.html
+++ b/giaodien.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MusicManageMusicManage</title>
+    <title>MusicManage</title>
 </head>
 <body>
     <h1>Website Quản Lý Music</h1>
     <p>Đây là danh sách bài hát</p>
-    <button>Bấm vào nút này để tìm nhạc</button>
+    <input type="search" value="Search">
+    <button>Search</button>
+    <br>
+    <button>Bấm vào đây để thoát</button>
 </body>
 </html>
