--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	<div class="header">
 		<div class = "logo">
 			<a href="index.html">
-				<img src="logoMusic.png" alt="">
+				<img src="img/logoMusic.png" alt="">
 				<p>Music Mangement</p>
 			</a>
 		</div>
@@ -121,7 +121,7 @@
 				<th>Musican</th>
 				<th>Singer</th>
 				<th>
-					<button class="newMusic"><img src=""></button>
+					<button class="newMusic"><img src="img/add.png"></button>
 				</th>
 			</tr>
 			<tr>
@@ -131,8 +131,8 @@
 				<td>Tú</td>
 				<td>Chipu</td>
 				<td>
-					<button class="editMusic"><img src=""></button>
-					<button class="deleteMusic"><img src=""></button>
+					<button class="editMusic"><img src="img/edit.png"></button>
+					<button class="deleteMusic"><img src="img/delete.png"></button>
 				</td>
 			</tr>
 			<tr>
@@ -142,8 +142,52 @@
 				<td>Tú</td>
 				<td>Chipu</td>
 				<td>
-					<button class="editMusic"><img src=""></button>
-					<button class="deleteMusic"><img src=""></button>
+					<button class="editMusic"><img src="img/edit.png"></button>
+					<button class="deleteMusic"><img src="img/delete.png"></button>
+				</td>
+			</tr>
+			<tr>
+				<td>Một triệu năm</td>
+				<td>2020-01-01</td>
+				<td>Trữ tình</td>
+				<td>Tú</td>
+				<td>Chipu</td>
+				<td>
+					<button class="editMusic"><img src="img/edit.png"></button>
+					<button class="deleteMusic"><img src="img/delete.png"></button>
+				</td>
+			</tr>
+			<tr>
+				<td>Một triệu năm</td>
+				<td>2020-01-01</td>
+				<td>Trữ tình</td>
+				<td>Tú</td>
+				<td>Chipu</td>
+				<td>
+					<button class="editMusic"><img src="img/edit.png"></button>
+					<button class="deleteMusic"><img src="img/delete.png"></button>
+				</td>
+			</tr>
+			<tr>
+				<td>Một triệu năm</td>
+				<td>2020-01-01</td>
+				<td>Trữ tình</td>
+				<td>Tú</td>
+				<td>Chipu</td>
+				<td>
+					<button class="editMusic"><img src="img/edit.png"></button>
+					<button class="deleteMusic"><img src="img/delete.png"></button>
+				</td>
+			</tr>
+			<tr>
+				<td>Một triệu năm</td>
+				<td>2020-01-01</td>
+				<td>Trữ tình</td>
+				<td>Tú</td>
+				<td>Chipu</td>
+				<td>
+					<button class="editMusic"><img src="img/edit.png"></button>
+					<button class="deleteMusic"><img src="img/delete.png"></button>
 				</td>
 			</tr>
 		</table>
