--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 			font-family: "Arial";
 			font-size: 14px;
 			color: #505050;
-		    margin: 0px;
+		    margin-top: 60px;
+		    margin-left: 0px;
+		    margin-right: 0px;
+		    margin-bottom: 0px;
 		}
 		.header {
+			background-color: #fff;
 			height: 60px;
 			margin: 0px;
 			display: flex;
@@ -19,6 +23,9 @@
 			align-items: center;
 			justify-content: space-between;
 			box-shadow: 0 4px 4px 0 rgba(0,0,0,.1);
+			position: fixed;
+			top: 0;
+			width: 100%;
 		}
 		.menu {
 			float: right;
@@ -90,6 +97,8 @@
 		}
 		.chuTo {
 			padding-left: 50px;
+			padding-top: 1px;
+			padding-bottom: 1px;
 			font-size: 20px;
 		}
     </style>
@@ -123,6 +132,72 @@
 				<th>
 					<button class="newMusic"><img src="img/add.png"></button>
 				</th>
+			</tr>
+			<tr>
+				<td>Một triệu năm</td>
+				<td>2020-01-01</td>
+				<td>Trữ tình</td>
+				<td>Tú</td>
+				<td>Chipu</td>
+				<td>
+					<button class="editMusic"><img src="img/edit.png"></button>
+					<button class="deleteMusic"><img src="img/delete.png"></button>
+				</td>
+			</tr>
+			<tr>
+				<td>Một triệu năm</td>
+				<td>2020-01-01</td>
+				<td>Trữ tình</td>
+				<td>Tú</td>
+				<td>Chipu</td>
+				<td>
+					<button class="editMusic"><img src="img/edit.png"></button>
+					<button class="deleteMusic"><img src="img/delete.png"></button>
+				</td>
+			</tr>
+			<tr>
+				<td>Một triệu năm</td>
+				<td>2020-01-01</td>
+				<td>Trữ tình</td>
+				<td>Tú</td>
+				<td>Chipu</td>
+				<td>
+					<button class="editMusic"><img src="img/edit.png"></button>
+					<button class="deleteMusic"><img src="img/delete.png"></button>
+				</td>
+			</tr>
+			<tr>
+				<td>Một triệu năm</td>
+				<td>2020-01-01</td>
+				<td>Trữ tình</td>
+				<td>Tú</td>
+				<td>Chipu</td>
+				<td>
+					<button class="editMusic"><img src="img/edit.png"></button>
+					<button class="deleteMusic"><img src="img/delete.png"></button>
+				</td>
+			</tr>
+			<tr>
+				<td>Một triệu năm</td>
+				<td>2020-01-01</td>
+				<td>Trữ tình</td>
+				<td>Tú</td>
+				<td>Chipu</td>
+				<td>
+					<button class="editMusic"><img src="img/edit.png"></button>
+					<button class="deleteMusic"><img src="img/delete.png"></button>
+				</td>
+			</tr>
+			<tr>
+				<td>Một triệu năm</td>
+				<td>2020-01-01</td>
+				<td>Trữ tình</td>
+				<td>Tú</td>
+				<td>Chipu</td>
+				<td>
+					<button class="editMusic"><img src="img/edit.png"></button>
+					<button class="deleteMusic"><img src="img/delete.png"></button>
+				</td>
 			</tr>
 			<tr>
 				<td>Một triệu năm</td>
